# Maj-Reviewer-server

./: ..gitignore.un~  .gitignore  environment.yml  reviewer.py
mortal/: config.toml  dataloader.py  mortal
reviewer_server/: Cargo.toml
reviewer_server/mortal/: config.toml  mortal.py
reviewer_server/mortal/models/: grp.pth
reviewer_server/src/: lib.rs  main.rs
reviewer_server/static/: index.html
templates/: index.html
